--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="banner-text">
-                        <p>Lorem ipsum dolaor,illum repellat minima, sit amet consecte</p>
+                        <p>El dolar subio o bajo?,illum repellat minima, sit amet consecte</p>
                     </div>
                 </div>
             </div>
